--- a/.env.local.template
+++ b/.env.local.template
@@ -1,2 +1,2 @@
-MONGODB_DB_NAME=
-MONGODB_URI=http://localhost:27017/${MONGODB_DB_NAME}
+MONGODB_DB_NAME=paver
+MONGODB_URI=mongodb://localhost:27017/${MONGODB_DB_NAME}
