--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "mongodb": "^4.3.1",
     "next": "12.0.9",
     "panzoom": "^9.4.2",
     "react": "17.0.2",
