--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^4.3.1",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-window": "^1.8.7"
   },
   "devDependencies": {
     "eslint": "8.8.0",
