--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "iron-session": "^6.1.3",
     "mongodb": "^4.3.1",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-window": "^1.8.7"
+    "react-window": "^1.8.7",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
