--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "bcrypt": "^5.0.1",
     "iron-session": "^6.1.3",
     "mongodb": "^4.3.1",
     "next": "12.0.9",
