--- a/web/package.json
+++ b/web/package.json
@@ -15,14 +15,18 @@
     "bcrypt": "^5.0.1",
     "iron-session": "^6.1.3",
     "mongodb": "^4.3.1",
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "13.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-window": "^1.8.7",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9"
+    "@types/node": "18.11.7",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "18.0.8",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
+    "typescript": "4.8.4"
   }
 }
