--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.9",
     "bcrypt": "^5.0.1",
     "iron-session": "^6.1.3",
     "mongodb": "^4.3.1",
