--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.9",
+    "@heroicons/react": "^2.0.14",
     "bcrypt": "^5.0.1",
     "iron-session": "^6.1.3",
     "mongodb": "^4.3.1",
