--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "bcrypt": "^5.0.1",
+    "fuse.js": "^6.6.2",
     "iron-session": "^6.1.3",
     "mongodb": "^4.3.1",
     "next": "13.0.0",
