--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
+    "@prisma/client": "^4.12.0",
     "bcrypt": "^5.0.1",
     "fuse.js": "^6.6.2",
     "iron-session": "^6.1.3",
@@ -30,6 +31,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "prisma": "^4.12.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   }
