--- a/web/.env.template
+++ b/web/.env.template
@@ -1,5 +1,9 @@
 COOKIE_NAME=org.olacathedral.pavestones
 SECRET=
 
-DB_NAME=paver
-DATABASE_URL="mongodb://localhost:27017/${DB_NAME}?retryWrites=true&w=majority"
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=password
+MONGO_REPLICA_HOST=localhost
+MONGO_REPLICA_PORT=27017
+
+DATABASE_URL="mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_REPLICA_HOST}:${MONGO_REPLICA_PORT}/paver?authSource=admin"
