--- a/web/package.json
+++ b/web/package.json
@@ -23,8 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-window": "^1.8.7",
-    "swr": "^1.3.0",
-    "tsx": "^3.12.6"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
@@ -38,6 +37,7 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.12.0",
     "tailwindcss": "^3.2.4",
+    "tsx": "^3.12.6",
     "typescript": "4.8.4"
   }
 }
