--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,9 @@
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@prisma/client": "^4.12.0",
+    "@trpc/client": "^10.20.0",
+    "@trpc/next": "^10.20.0",
+    "@trpc/server": "^10.20.0",
     "bcrypt": "^5.0.1",
     "fuse.js": "^6.6.2",
     "iron-session": "^6.1.3",
