--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,8 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
