--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.3",
     "swr": "^1.3.0",
     "zod": "^3.21.4"
   },
