--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "generate": "prisma generate",
     "seed": "prisma db seed"
   },
   "prisma": {
@@ -25,7 +26,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.12.3",
-    "swr": "^1.3.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
