--- a/web/.env.template
+++ b/web/.env.template
@@ -1,5 +1,4 @@
-COOKIE_NAME=org.olacathedral.pavestones
-SECRET=
+SECRET=please_change_this_key_please___
 
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=password
