Switch database provider to MySQL

--- a/web/.env.template
+++ b/web/.env.template
@@ -1,8 +1,6 @@
 SECRET=please_change_this_key_please___
 
-MONGO_INITDB_ROOT_USERNAME=admin
-MONGO_INITDB_ROOT_PASSWORD=password
-MONGO_REPLICA_HOST=localhost
-MONGO_REPLICA_PORT=27017
+MYSQL_DATABASE=paver
+MYSQL_ROOT_PASSWORD=password
 
-DATABASE_URL="mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_REPLICA_HOST}:${MONGO_REPLICA_PORT}/paver?authSource=admin"
+DATABASE_URL="mysql://root:${MYSQL_ROOT_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
