--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   database:
-    build: ./database
+    image: mysql
     env_file:
       - web/.env
     ports:
-      - 27017:27017
+      - 3306:3306
 
   web:
     build: ./web
