--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "prisma generate",
+    "push": "prisma db push",
     "seed": "prisma db seed"
   },
   "prisma": {
