--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ services:
   database:
     image: mysql
     env_file:
-      - web/.env
+      - .env
     ports:
       - 3306:3306
 
-  web:
-    build: ./web
+  server:
+    build: .
     depends_on:
       - database
     ports:
