--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
-SECRET=please_change_this_key_please___
-
-MYSQL_DATABASE=paver
 MYSQL_ROOT_PASSWORD=password
+SECRET=please__change__this__key__please
 
-DATABASE_URL="mysql://root:${MYSQL_ROOT_PASSWORD}@localhost:3306/${MYSQL_DATABASE}"
+# To conceal MySQL container, set MYSQL_HOST to "database" and remove the port
+# mapping from docker-compose.yml
+DATABASE_HOST=localhost
+DATABASE_URL="mysql://root:${MYSQL_ROOT_PASSWORD}@${DATABASE_HOST}:3306/paver"
